--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "next": "^9.5.3",
+    "next-images": "^1.6.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-toggle": "^4.1.1"
   },
   "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/react": "^16.9.51",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.4",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.11.1",
-    "styled-components": "^5.2.0"
+    "react-icons": "^3.11.0",
+    "styled-components": "^5.2.0",
+    "typescript": "^4.0.3"
   }
 }
